loop for, condition set

--- a/palindroma/index.html
+++ b/palindroma/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         
-        <h1></h1>
+        <h1 id="output">a</h1>
         <!--js-->
         <script src="js/scripts.js"></script>
     </body>
